Fix article combobox overflow

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1164,7 +1164,7 @@ section {
 # article
 --------------------------------------------------------------*/
 .article {
-  overflow: auto;
+  /* overflow: auto; */
 }
 
 .article:before {
@@ -1214,7 +1214,7 @@ section {
   position: relative;
   /* padding: 80px 0; */
   /* min-height: 50vh; */
-  overflow: auto;
+  /* overflow: auto; */
 }
 
 .commentary:before {
